class CombatSystem:

    def __init__(self):

        self = self

    def prepare_attack(self, action):

        return {"type": "DAMAGE", "data": action}
